@@ -1,3 +1,8 @@
+2012-02-13  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.texi (Customizing the IMAP Connection): Mention
+	nnimap-record-commands.
+
 2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.texi (Mail Source Specifiers): Add a pop3 via an SSH tunnel
